# python-zocalo

./: .azure-pipelines.yml  .bumpversion.cfg  .codecov.yml  .mypy.ini  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  getting_started.md  pyproject.toml  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/: ci.yml
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build-and-push-docker-images.yml  build_and_test.yml  codeql.yml  linting.yml
contrib/: .nfs00000000a940a6690000584f  configuration.yml.verbose  configuration_file.yml  rabbitmq-configuration.yaml  site-configuration.yml
contrib/rabbitmq_users/: README.md  custom-user.ini
docs/: Makefile  conf.py  getting_started.rst  index.rst  installation.rst  make.bat  prerequisites.rst  siteconfig.rst  systemtest.rst  usage.rst  workflows.rst
docs/tutorials/: tutorial_1.rst
examples/: zocalo.yml
implementors/: cookiecutter.json
implementors/{{cookiecutter.root_name}}/: setup.cfg  setup.py
src/zocalo/: __init__.py  trigger.py  wrapper.py
src/zocalo/cli/: configure-rabbitmq.py  configure_rabbitmq.py  dlq_check.py  dlq_purge.py  dlq_reinject.py  go.py  mimas.py  pickup.py  queue_drain.py  shutdown.py  system_test.py  wrap.py
src/zocalo/configuration/: __init__.py  argparse.py  graylog.py  jmx.py  plugin_graylog.py  plugin_jmx.py  plugin_logging.py  plugin_mimas.py  plugin_rabbitmqapi.py  plugin_slurm.py  plugin_smtp.py  plugin_stomp.py  plugin_storage.py  plugins.py  stomp.py  utils.py
src/zocalo/ispyb/: simulator.py
src/zocalo/mimas/: README.md  classes.py  core.py  tasks.py
src/zocalo/mimas/implementors/tasks/: bl.py
src/zocalo/mimas/implementors/triggers/: test.py
src/zocalo/mimas/recipes/: mimas.json  trigger.json
src/zocalo/service/: __init__.py  dispatcher.py  jsonlines.py  mailer.py  mimas.py  pymca_fitter.py  runner.py  schlockmeister.py  trigger.py
src/zocalo/system_test/: README.md  common.py  result.py  tmp.py
src/zocalo/system_test/recipes/: test-dispatcher.json
src/zocalo/system_test/tests/: activemq.py  dispatcher.py  mimas.py
src/zocalo/util/: __init__.py  jmxstats.py  pymca_fitter.py  rabbitmq.py  symlink.py
src/zocalo/util/slurm/: __init__.py  models.py
tests/: test_graylog.py  test_mimas_scenario.py  test_mimas_service.py  test_mimas_validation.py  test_mimas_zocalo_messages.py  test_trigger.py  test_zocalo.py
tests/cli/: test_dlq_check.py  test_dlq_purge.py  test_dlq_reinject.py  test_go.py  test_pickup.py  test_queue_drain.py  test_shutdown.py  test_wrap.py
tests/configuration/: test_configuration.py  test_plugin_graylog.py  test_plugin_jmx.py  test_plugin_logging.py  test_plugin_slurm.py  test_plugin_smtp.py  test_plugin_storage.py  test_schemas.py
tests/service/: test_dispatcher.py  test_jsonlines.py  test_mailer.py
tests/util/: test.py  test_rabbitmq.py  test_slurm.py  test_symlink.py
zocalo/: README.MD  __init__.py  wrapper.py
zocalo/cli/: go.py  go2.py  wrap.py
zocalo/configuration/: __init__.py  graylog.py  ispyb.py  jmx.py  plugins.py  stomp.py  utils.py
zocalo/service/: __init__.py  dispatcher.py  runner.py  schlockmeister.py
zocalo/util/: jmxstats.py  symlink.py
