[metadata]
name = zocalo
version = 0.7.4
description = Infrastructure components for automated data processing at Diamond Light Source
author = Diamond Light Source - Scientific Software et al.
author_email = scientificsoftware@diamond.ac.uk
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project-urls =
    Download = https://github.com/DiamondLightSource/python-zocalo/releases
    Documentation = https://github.com/DiamondLightSource/python-zocalo
    GitHub = https://github.com/DiamondLightSource/python-zocalo
    Bug-Tracker = https://github.com/DiamondLightSource/python-zocalo/issues

[options]
include_package_data = True
install_requires =
    graypy
    marshmallow
    pyyaml
    setuptools
    workflows
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    zocalo.go = zocalo.cli.go:run
    zocalo.service = zocalo.service:start_service
    zocalo.wrap = zocalo.cli.wrap:run
libtbx.dispatcher.script =
    zocalo.go = zocalo.go
    zocalo.service = zocalo.service
    zocalo.wrap = zocalo.wrap
libtbx.precommit =
    zocalo = zocalo
workflows.services =
    Schlockmeister = zocalo.service.schlockmeister:Schlockmeister
zocalo.wrappers =
    dummy = zocalo.wrapper:DummyWrapper

[options.packages.find]
where = src

[flake8]
exclude = docs

[aliases]
test = pytest
