[metadata]
name = zocalo
version = 0.10.0
description = Infrastructure components for automated data processing at Diamond Light Source
author = Diamond Light Source - Scientific Software et al.
author_email = scientificsoftware@diamond.ac.uk
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project-urls =
    Download = https://github.com/DiamondLightSource/python-zocalo/releases
    Documentation = https://github.com/DiamondLightSource/python-zocalo
    GitHub = https://github.com/DiamondLightSource/python-zocalo
    Bug-Tracker = https://github.com/DiamondLightSource/python-zocalo/issues

[options]
include_package_data = True
install_requires =
    PyYAML
    graypy>=1.0
    marshmallow
    setuptools
    workflows>=2.14
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    zocalo.go = zocalo.cli.go:run
    zocalo.queue_drain = zocalo.cli.queue_drain:run
    zocalo.service = zocalo.service:start_service
    zocalo.shutdown = zocalo.cli.shutdown:run
    zocalo.wrap = zocalo.cli.wrap:run
    zocalo.dlq_check = zocalo.cli.dlq_check:run
    zocalo.dlq_purge = zocalo.cli.dlq_purge:run
    zocalo.dlq_reinject = zocalo.cli.dlq_reinject:run
libtbx.dispatcher.script =
    zocalo.go = zocalo.go
    zocalo.queue_drain = zocalo.queue_drain
    zocalo.service = zocalo.service
    zocalo.shutdown = zocalo.shutdown
    zocalo.wrap = zocalo.wrap
libtbx.precommit =
    zocalo = zocalo
workflows.services =
    Schlockmeister = zocalo.service.schlockmeister:Schlockmeister
zocalo.configuration.plugins =
    graylog = zocalo.configuration.plugin_graylog:Graylog
    rabbitmqapi = zocalo.configuration.plugin_rabbitmqapi:RabbitAPI
    storage = zocalo.configuration.plugin_storage:Storage
    jmx = zocalo.configuration.plugin_jmx:JMX
zocalo.wrappers =
    dummy = zocalo.wrapper:DummyWrapper

[options.packages.find]
where = src

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,

[aliases]
test = pytest
